log
Thu 16 May 2024 07:23:04 AM UTC: 
 tests:  0|5
total_score: 0/70
0baa163
Thu 16 May 2024 07:24:14 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:69:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   69 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
3c1aac6
Fri 17 May 2024 03:33:02 AM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:86:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   86 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
e935980
Fri 17 May 2024 03:33:20 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
c540526
Fri 17 May 2024 03:34:20 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  4|3
total_score: 30/70
fcbddfe
